comment cho từng file, sửa lỗi, tối ưu